@@ -1,3 +1,10 @@
+2004-09-16  Jerry Quinn  <jlquinn@optonline.net>
+
+	* java/awt/image/ColorModel.java (getDataElement): Implemented.
+	Update javadoc.
+	(getDataElements): Add missing version.  Remove bogus version.
+	Update javadoc.
+
 2004-09-14  Olga Rodimina  <rodimina@redhat.com>
 
 	* javax/swing/plaf/basic/BasicComboBoxUI.java:
